@@ -20,20 +20,19 @@ import java.util.Random;
 
 
 
-
 public class HexagonalSnakeGame extends Application {
-    private static final int HEX_SIZE = 30;
-    private static final int WIDTH = 10; // Szerokość planszy
-    private static final int HEIGHT = 10; // Wysokość planszy
+    private static final int HEX_SIZE = 20;
+    private static final int WIDTH = 30; // Szerokość planszy
+    private static final int HEIGHT = 25; // Wysokość planszy
     private List<Polygon> snake = new ArrayList<>();
-    private double snakeX = 300, snakeY = 300; // Początkowe współrzędne węża
+    private double snakeX = 300, snakeY = 312; // Początkowe współrzędne węża
     private Pane root;
     private boolean isOddRow; // Flaga wskazująca, czy rząd jest nieparzysty
 
     @Override
     public void start(Stage primaryStage) {
         root = new Pane();
-        Scene scene = new Scene(root, 600, 600);
+        Scene scene = new Scene(root, 800, 800);
 
         // Tworzenie planszy w układzie heksagonalnym
         for (int row = 0; row < HEIGHT; row++) {
@@ -59,10 +58,10 @@ public class HexagonalSnakeGame extends Application {
             switch (key) {
                 case Q -> moveSnake(isOddRow ? -HEX_SIZE * 1.5 : -HEX_SIZE * 3 / 2, -Math.sqrt(3) * HEX_SIZE / 2); // Lewy górny
                 case E -> moveSnake(isOddRow ? HEX_SIZE * 1.5 : HEX_SIZE * 3 / 2, -Math.sqrt(3) * HEX_SIZE / 2); // Prawy górny
-                case W -> moveSnake(0, -3 * HEX_SIZE / 2); // Prawy
+                case W -> moveSnake(0, -HEX_SIZE * Math.sqrt(3)); // góra
                 case D -> moveSnake(isOddRow ? HEX_SIZE * 1.5 : HEX_SIZE * 3 / 2, Math.sqrt(3) * HEX_SIZE / 2); // Prawy dolny
                 case A -> moveSnake(isOddRow ? -HEX_SIZE * 1.5 : -HEX_SIZE * 3 / 2, Math.sqrt(3) * HEX_SIZE / 2); // Lewy dolny
-                case S -> moveSnake(0, 3 * HEX_SIZE / 2); // Lewy
+                case S -> moveSnake(0, HEX_SIZE * Math.sqrt(3)); // dół
             }
         });
 
@@ -96,7 +95,7 @@ public class HexagonalSnakeGame extends Application {
 
         // Usuwamy najstarszą część węża, aby symulować poruszanie się
         if (snake.size() > 5) { // Limit długości węża
-            Polygon tail = snake.remove(0);
+            Polygon tail = snake.removeFirst();
             root.getChildren().remove(tail);
         }
     }
